recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:12: error: not found: value levecrayon
    levecrayon()
    ^